--- a/application/doctrine/data/fixtures/Role.yml
+++ b/application/doctrine/data/fixtures/Role.yml
@@ -1,5 +1,5 @@
 Role:
-    ISSO:
+    isso_role:
         name: Information System Security Officer
         nickname: ISSO
         description: |
@@ -43,26 +43,8 @@ Role:
             - system_update
             - asset_read
             - asset_update
-            - incident_read
-            - incident_classify
-            - incident_reject
-            - incident_resolve
-            - incident_close
-            - incident_create
-            - incident_update
-            - irworkflowdef_read
-            - irworkflowdef_create
-            - irworkflowdef_update
-            - irworkflowdef_delete
-            - ircategory_read
-            - ircategory_update
-            - ircategory_create
-            - ircategory_delete
-            - irreport_read
-            - irreport_generate
-            - irreport_export
 
-    REVIEWER:
+    reviewer_role:
         name: Reviewer
         nickname: REVIEWER
         description: >
@@ -77,7 +59,7 @@ Role:
             - notification_asset
             - notification_finding
         
-    IVV:
+    ivv_role:
         name: Independent Verification and Validation
         nickname: IV&V
         description: >
@@ -114,7 +96,7 @@ Role:
             - notification_asset
             - notification_finding
 
-    SAISO:
+    saiso_role:
         name: Senior Agency Information Security Officer
         nickname: SAISO
         description: >
@@ -158,7 +140,8 @@ Role:
             - notification_admin
             - notification_asset
             - notification_finding
-    ADMIN:
+    
+    admin_role:
         name: Application Administrator
         nickname: ADMIN
         description: >
@@ -229,8 +212,26 @@ Role:
             - notification_admin
             - notification_asset
             - notification_finding
+            - incident_read
+            - incident_classify
+            - incident_reject
+            - incident_resolve
+            - incident_close
+            - incident_create
+            - incident_update
+            - irworkflowdef_read
+            - irworkflowdef_create
+            - irworkflowdef_update
+            - irworkflowdef_delete
+            - ircategory_read
+            - ircategory_update
+            - ircategory_create
+            - ircategory_delete
+            - irreport_read
+            - irreport_generate
+            - irreport_export
 
-    CERTAGENT:
+    certagent_role:
         name: Certification Agent
         nickname: CERTAGENT
         description: >
@@ -255,7 +256,7 @@ Role:
             - findings_update_finding_recommendation
             - notification_finding      
 
-    ISO:
+    iso_role:
         name: Information System Owner
         nickname: ISO
         description: >
@@ -304,7 +305,7 @@ Role:
             - notification_asset
             - notification_finding
 
-    AO:
+    ao_role:
         name: Authorizing Official
         nickname: AO
         description: >
@@ -326,7 +327,7 @@ Role:
             - notification_asset
             - notification_finding
 
-    OSS:
+    oss_role:
         name: Operational Support Staff
         nickname: OSS
         description: >
@@ -351,7 +352,7 @@ Role:
             - notification_asset
             - notification_finding        
 
-    OIG:
+    oig_role:
         name: Office Of The Inspector General
         nickname: OIG
         description: >
@@ -363,7 +364,7 @@ Role:
             - incident_read
             - incident_create
 
-    IRC:
+    irc_role:
         name: Incident Response Coordinator
         nickname: IRC
         description: >
@@ -390,21 +391,21 @@ Role:
             - irreport_generate
             - irreport_export
     
-    DBR:
+    dbr_role:
         name: Data Breach Representative
         nickname: DBR
         description: >
             <p>Specialists assigned for incidents involving the compromise of sensitive or confidential data.</p>
         Privileges: [areas_dashboard, incident_read, incident_create]
    
-    PA:
+    pa_role:
         name: Privacy Advocate
         nickname: PA
         description: >
             <p>A specialist assigned for incidents involving Personally Identifiable Information (PII).</p>
         Privileges: [areas_dashboard, incident_read, incident_create]
         
-    IRS:
+    irs_role:
         name: Incident Response Specialist
         nickname: IRS
         description: >
@@ -412,7 +413,7 @@ Role:
             particular incident, such as data forensics, network forensics, audit log analysis, etc.</p>
         Privileges: [areas_dashboard, incident_read, incident_create]
   
-    HDR:
+    hdr_role:
         name: Help Desk Representative
         nickname: HDR
         description: >
