Feature request on the IR branch: OFJ-3 Incident Reporting Module
Getting the entire workflow to work end-to-end and fixing up some style issues.

--- a/application/doctrine/data/fixtures/Configuration.yml
+++ b/application/doctrine/data/fixtures/Configuration.yml
@@ -21,12 +21,12 @@ Configuration:
 
     sender:
         name: sender
-        value: 
+        value: openfisma@agency.gov
         description: Send Email Address
 
     subject:
         name: subject
-        value: 
+        value: OpenFISMA Notification
         description: Email Subject
 
     smtp_host:
