--- a/application/doctrine/schema/Finding.yml
+++ b/application/doctrine/schema/Finding.yml
@@ -199,5 +199,4 @@ Finding:
                 name: createdTs
                 type: timestamp
             updated:
-                name: modifiedTs
-                type: timestamp
+                disabled: true
