--- a/application/doctrine/schema/Source.yml
+++ b/application/doctrine/schema/Source.yml
@@ -1,12 +1,11 @@
 Source:
-    listeners: [XssListener, IndexListener, NotificationListener]
+    listeners: [IndexListener, NotificationListener]
         
     columns:
         name: 
             type: string(255)
             extra:
                 logicalName: Source Name
-                purify: plaintext
                 searchIndex: unstored
                 notify: true
         nickname: 
@@ -14,14 +13,12 @@ Source:
             unique: true
             extra:
                 logicalName: Source Nickname
-                purify: plaintext
                 searchIndex: unstored
                 notify: true    
         description: 
             type: string
             extra:
                 logicalName: Description
-                purify: html
                 searchIndex: unstored
                 notify: true
             comment: Any extra information about this finding source
