--- a/application/doctrine/schema/Incident.yml
+++ b/application/doctrine/schema/Incident.yml
@@ -1,5 +1,5 @@
 Incident:
-    listeners: [XssListener, IndexListener]
+    listeners: [IndexListener]
     
     columns:
         modifiedTs: timestamp
@@ -9,13 +9,11 @@ Incident:
             type: string(255)
             extra:
                 auditLog: true
-                purify: plaintext
                 logicalName: Reporter's Title
         reporterFirstName: 
             type: string(255)
             extra:
                 auditLog: true
-                purify: plaintext
                 logicalName: Reporter's First Name
                 searchIndex: unstored
             comment: >
@@ -26,14 +24,12 @@ Incident:
             type: string(255)
             extra:
                 auditLog: true
-                purify: plaintext
                 logicalName: Reporter's Last Name
                 searchIndex: unstored
         reporterOrganization: 
             type: string(255)
             extra:
                 auditLog: true
-                purify: plaintext
                 logicalName: Reporter's Organization
                 searchIndex: unstored
 
@@ -41,44 +37,37 @@ Incident:
             type: string(255)
             extra:
                 auditLog: true
-                purify: plaintext
                 logicalName: Reporter's Street Address Line 1
         reporterAddress2: 
             type: string(255)
             extra:
                 auditLog: true
-                purify: plaintext
                 logicalName: Reporter's Street Address Line 2
         reporterCity: 
             type: string(255)
             extra:
                 auditLog: true
-                purify: plaintext
                 logicalName: Reporter's City
         reporterState: 
             type: string(255)
             extra:
                 auditLog: true
-                purify: plaintext
                 logicalName: Reporter's State
         reporterZip: 
             type: string(10)
             extra:
                 auditLog: true
-                purify: plaintext
                 logicalName: Reporter's Zip Code
         reporterPhone: 
             type: string(15)
             extra:
                 auditLog: true
-                purify: plaintext
                 logicalName: Reporter's Phone Number
             comment: 10 digit US number with no symbols (dashes, dots, parentheses, etc.)
         reporterFax: 
             type: string(15)
             extra:
                 auditLog: true
-                purify: plaintext
                 logicalName: Reporter's Fax Number
             comment: 10 digit US number with no symbols (dashes, dots, parentheses, etc.)
         reporterEmail: 
@@ -87,21 +76,18 @@ Incident:
                 check_mx: false
             extra:
                 auditLog: true
-                purify: plaintext
                 logicalName: Reporter's E-mail Address
         
         locationBuilding: 
             type: string(255)
             extra:
                 auditLog: true
-                purify: plaintext
                 logicalName: Building
             comment: The building in which the incident is believed to have occurred
         locationRoom: 
             type: string(255)
             extra:
                 auditLog: true
-                purify: plaintext
                 logicalName: Room
             comment: The room in which the incident is believed to have occurred
 
@@ -141,7 +127,6 @@ Incident:
             type: string
             extra: 
                 auditLog: true
-                purify: html
                 logicalName: Incident Description
                 searchIndex: unstored
 
@@ -156,7 +141,6 @@ Incident:
             type: string
             extra:
                 auditLog: true
-                purify: html
                 logicalName: Additional PII Details
                 searchIndex: unstored
             comment: Additional space to explain the nature of PII involved
@@ -225,19 +209,16 @@ Incident:
             type: string(255)
             extra:
                 auditLog: true
-                purify: plaintext
                 logicalName: Name Of Shipping Company
         piiShipmentTimeline:
             type: string
             extra:
                 auditLog: true
-                purify: html
                 logicalName: Description Of Shipment Timeline
         piiShipmentTrackingNumbers:
             type: string
             extra:
                 auditLog: true
-                purify: html
                 logicalName: Shipment Tracking Numbers
 
         hostIp:
@@ -245,14 +226,12 @@ Incident:
             Fisma_Validator_Ip: true
             extra:
                 auditLog: true
-                purify: plaintext
                 logicalName: Host IP Address
             comment: The IP address of the affected host
         hostName:
             type: string(255)
             extra:
                 auditLog: true
-                purify: plaintext
                 logicalName: Host Name
         hostOs:
             type: enum
@@ -264,7 +243,6 @@ Incident:
             type: string
             extra: 
                 auditLog: true
-                purify: html
                 logicalName: Additional Host Details
         
         sourceIp:
@@ -272,14 +250,12 @@ Incident:
             Fisma_Validator_Ip: true
             extra:
                 auditLog: true
-                purify: plaintext
                 logicalName: Source IP Address
             comment: The IP address from which the incident is believed to have originated
         sourceAdditional:
             type: string
             extra: 
                 auditLog: true
-                purify: html
                 logicalName: Additional Details About Incident Source
             comment: Additional description of the source or origin of the incident
         
@@ -287,7 +263,6 @@ Incident:
             type: string
             extra: 
                 auditLog: true
-                purify: html
                 logicalName: Actions That Were Taken Prior To Incident Report
                 searchIndex: unstored
             comment: What actions were taken prior to reporting the incident?
