--- a/application/doctrine/schema/Network.yml
+++ b/application/doctrine/schema/Network.yml
@@ -1,12 +1,11 @@
 Network:
-    listeners: [XssListener, IndexListener, NotificationListener]
+    listeners: [IndexListener, NotificationListener]
     
     columns:
         name: 
             type: string(255)
             extra:
                 logicalName: Network Name
-                purify: plaintext
                 searchIndex: unstored
                 notify: true
         nickname:
@@ -14,14 +13,12 @@ Network:
             unique: true
             extra:
                 logicalName: Network Nickname
-                purify: plaintext
                 searchIndex: unstored
                 notify: true
         description: 
             type: string
             extra:
                 logicalName: Description
-                purify: html
                 searchIndex: unstored
                 notify: true
             comment: Any extra information about this network, such as protocols used, geographic location, etc.
