--- a/application/doctrine/schema/Organization.yml
+++ b/application/doctrine/schema/Organization.yml
@@ -1,5 +1,5 @@
 Organization:    
-    listeners: [XssListener, IndexListener]
+    listeners: [IndexListener]
 
     columns:
         createdTs: timestamp
@@ -9,7 +9,6 @@ Organization:
             notblank: true
             notnull: true
             extra:
-                purify: plaintext
                 searchIndex: unstored
         nickname:
             type: string(255)
@@ -19,7 +18,6 @@ Organization:
             unique: true
             extra:
                 logicalName: Nickname
-                purify: plaintext
                 searchIndex: unstored
         orgType:
             type: enum
@@ -32,7 +30,6 @@ Organization:
         description: 
             type: string
             extra:
-                purify: html
                 searchIndex: unstored
 
     relations:
