Task on branches OFJ-558 Change / standardize escaping in Views
Reverted revision 3112 ("Removed the class XssListener and removed all references to it from the doctrine schema.")
Reverted revision 3149 of library/Fisma/Inject/Abstract.php ("Removed remaining reference to XssListener in Fisma_Inject_Abstract")

XssListener will be used again, but with modifications.

--- a/application/doctrine/schema/Asset.yml
+++ b/application/doctrine/schema/Asset.yml
@@ -1,5 +1,5 @@
 Asset:
-    listeners: [IndexListener, NotificationListener]
+    listeners: [XssListener, IndexListener, NotificationListener]
         
     columns:
         createdTs: timestamp
@@ -9,6 +9,7 @@ Asset:
             type: string(255)
             extra:
                 logicalName: Asset Name
+                purify: plaintext
                 searchIndex: unstored
                 notify: true
             comment: The name of this asset
