--- a/application/doctrine/schema/Finding.yml
+++ b/application/doctrine/schema/Finding.yml
@@ -1,5 +1,5 @@
 Finding:
-    listeners: [IndexListener, NotificationListener]
+    listeners: [XssListener, IndexListener, NotificationListener]
     
     columns:
         createdTs: timestamp
@@ -25,6 +25,7 @@ Finding:
             type: string(255)
             unique: true
             extra: 
+                purify: plaintext
                 auditLog: true
                 logicalName: Legacy Finding ID
                 searchIndex: unstored
@@ -53,6 +54,7 @@ Finding:
         description:
             type: string
             extra: 
+                purify: html
                 auditLog: true
                 logicalName: Finding Description
                 searchIndex: unstored
@@ -60,6 +62,7 @@ Finding:
         recommendation:
             type: string
             extra: 
+                purify: html
                 auditLog: true
                 logicalName: Recommendation
                 searchIndex: unstored
@@ -67,6 +70,7 @@ Finding:
         mitigationStrategy:
             type: string
             extra: 
+                purify: html
                 auditLog: true
                 logicalName: Mitigation Strategy
                 searchIndex: unstored
@@ -74,6 +78,7 @@ Finding:
         resourcesRequired:
             type: string
             extra: 
+                purify: html
                 auditLog: true
                 logicalName: Resources Required
                 searchIndex: unstored
@@ -100,12 +105,14 @@ Finding:
             extra:
                 auditLog: true
                 logicalName: Justification for modifying ECD
+                purify: plaintext
             comment: If the current ECD needs to be changed, then this field holds the user\'s justification for changing it
         actualCompletionDate:
             type: date                              
         threat:
             type: string
             extra: 
+                purify: html
                 auditLog: true
                 logicalName: Description of Threat Source
                 searchIndex: unstored
@@ -121,6 +128,7 @@ Finding:
         countermeasures:
             type: string
             extra: 
+                purify: html
                 auditLog: true
                 logicalName: Description of Countermeasures
                 searchIndex: unstored
