--- a/application/doctrine/schema/IrAuditLog.yml
+++ b/application/doctrine/schema/IrAuditLog.yml
@@ -4,13 +4,21 @@ IrAuditLog:
             type: timestamp
         fieldName: 
             type: string(255)
+            extra:
+                purify: plaintext
         originalValue: 
             type: string
+            extra:
+                purify: plaintext
         newValue: 
             type: string
+            extra:
+                purify: plaintext
         addressIp:
             type: string(15)
             ip: true
+            extra:
+                purify: plaintext
                 
         incidentId: 
             type: integer
