--- a/application/doctrine/schema/IrHistory.yml
+++ b/application/doctrine/schema/IrHistory.yml
@@ -7,8 +7,12 @@ IrHistory:
             values: ['COMMENT','WORKFLOW','REPORT','CLASSIFY','RESOLVE','CLOSE']
         name: 
             type: string(255)
+            extra:
+                purify: plaintext
         description:
             type: string
+            extra:
+                purify: html
                 
         userId: 
             type: integer
