--- a/application/doctrine/schema/LdapConfig.yml
+++ b/application/doctrine/schema/LdapConfig.yml
@@ -1,24 +1,39 @@
 LdapConfig:
+    listeners: [XssListener]
 
     columns:
         host:
             type: string(255)
+            extra:
+                purify: plaintext
         port: integer(2)
         accountDomainName:
             type: string(255)
+            extra:
+                purify: plaintext
         accountDomainNameShort:
             type: string(255)
+            extra:
+                purify: plaintext
         username: 
             type: string(255)
+            extra:
+                purify: plaintext
         # Password field is purified for HTML, even though it shouldn't contain HTML. The reason is that the plaintext
         # purifier might obscure valid characters in the password
         password: 
             type: string(255)
+            extra: 
+                purify: html
         baseDn: 
             type: string
+            extra:
+                purify: plaintext 
         # Account filter is not plaintext purified either, for the reason as the password field      
         accountFilterFormat: 
             type: string(255)
+            extra:
+                purify: html
         accountCanonicalForm: string(255)
         bindRequiresDn: boolean
         useSsl: boolean
