--- a/application/doctrine/schema/SystemDocument.yml
+++ b/application/doctrine/schema/SystemDocument.yml
@@ -1,5 +1,5 @@
 SystemDocument:
-    listeners: [IndexListener, NotificationListener]
+    listeners: [XssListener, IndexListener, NotificationListener]
     
     indexes: 
         uniqueTypePerSystem:
@@ -12,11 +12,14 @@ SystemDocument:
         createdTs: timestamp
         mimeType:
             type: string(255)
+            extra:
+                purify: plaintext
             comment: Store the MIME type of this uploaded file
         fileName:
             type: string(255)
             extra:
                 notify: true
+                purify: plaintext
                 searchIndex: unstored
                 searchAlias: file
             comment: Name of the uploaded file
@@ -28,6 +31,7 @@ SystemDocument:
         description:
             type: string
             extra:
+                purify: plaintext
                 searchIndex: unstored
             comment: A place for the user to enter version comments
 
