--- a/application/doctrine/schema/Comment.yml
+++ b/application/doctrine/schema/Comment.yml
@@ -1,9 +1,13 @@
 Comment:
+    listeners: [XssListener]
+        
     columns:
         createdTs: timestamp
         
         content:
             type: string(255)
+            extra:
+                purify: html
             comment: The text of the comment
         
         findingEvaluationId: integer
