--- a/application/doctrine/schema/Incident.yml
+++ b/application/doctrine/schema/Incident.yml
@@ -1,5 +1,5 @@
 Incident:
-    listeners: [IndexListener]
+    listeners: [XssListener, IndexListener]
     
     columns:
         modifiedTs: timestamp
@@ -9,11 +9,13 @@ Incident:
             type: string(255)
             extra:
                 auditLog: true
+                purify: plaintext
                 logicalName: Reporter's Title
         reporterFirstName: 
             type: string(255)
             extra:
                 auditLog: true
+                purify: plaintext
                 logicalName: Reporter's First Name
                 searchIndex: unstored
             comment: >
@@ -24,12 +26,14 @@ Incident:
             type: string(255)
             extra:
                 auditLog: true
+                purify: plaintext
                 logicalName: Reporter's Last Name
                 searchIndex: unstored
         reporterOrganization: 
             type: string(255)
             extra:
                 auditLog: true
+                purify: plaintext
                 logicalName: Reporter's Organization
                 searchIndex: unstored
 
@@ -37,37 +41,44 @@ Incident:
             type: string(255)
             extra:
                 auditLog: true
+                purify: plaintext
                 logicalName: Reporter's Street Address Line 1
         reporterAddress2: 
             type: string(255)
             extra:
                 auditLog: true
+                purify: plaintext
                 logicalName: Reporter's Street Address Line 2
         reporterCity: 
             type: string(255)
             extra:
                 auditLog: true
+                purify: plaintext
                 logicalName: Reporter's City
         reporterState: 
             type: string(255)
             extra:
                 auditLog: true
+                purify: plaintext
                 logicalName: Reporter's State
         reporterZip: 
             type: string(10)
             extra:
                 auditLog: true
+                purify: plaintext
                 logicalName: Reporter's Zip Code
         reporterPhone: 
             type: string(15)
             extra:
                 auditLog: true
+                purify: plaintext
                 logicalName: Reporter's Phone Number
             comment: 10 digit US number with no symbols (dashes, dots, parentheses, etc.)
         reporterFax: 
             type: string(15)
             extra:
                 auditLog: true
+                purify: plaintext
                 logicalName: Reporter's Fax Number
             comment: 10 digit US number with no symbols (dashes, dots, parentheses, etc.)
         reporterEmail: 
@@ -76,18 +87,21 @@ Incident:
                 check_mx: false
             extra:
                 auditLog: true
+                purify: plaintext
                 logicalName: Reporter's E-mail Address
         
         locationBuilding: 
             type: string(255)
             extra:
                 auditLog: true
+                purify: plaintext
                 logicalName: Building
             comment: The building in which the incident is believed to have occurred
         locationRoom: 
             type: string(255)
             extra:
                 auditLog: true
+                purify: plaintext
                 logicalName: Room
             comment: The room in which the incident is believed to have occurred
 
@@ -127,6 +141,7 @@ Incident:
             type: string
             extra: 
                 auditLog: true
+                purify: html
                 logicalName: Incident Description
                 searchIndex: unstored
 
@@ -141,6 +156,7 @@ Incident:
             type: string
             extra:
                 auditLog: true
+                purify: html
                 logicalName: Additional PII Details
                 searchIndex: unstored
             comment: Additional space to explain the nature of PII involved
@@ -209,16 +225,19 @@ Incident:
             type: string(255)
             extra:
                 auditLog: true
+                purify: plaintext
                 logicalName: Name Of Shipping Company
         piiShipmentTimeline:
             type: string
             extra:
                 auditLog: true
+                purify: html
                 logicalName: Description Of Shipment Timeline
         piiShipmentTrackingNumbers:
             type: string
             extra:
                 auditLog: true
+                purify: html
                 logicalName: Shipment Tracking Numbers
 
         hostIp:
@@ -226,12 +245,14 @@ Incident:
             Fisma_Validator_Ip: true
             extra:
                 auditLog: true
+                purify: plaintext
                 logicalName: Host IP Address
             comment: The IP address of the affected host
         hostName:
             type: string(255)
             extra:
                 auditLog: true
+                purify: plaintext
                 logicalName: Host Name
         hostOs:
             type: enum
@@ -243,6 +264,7 @@ Incident:
             type: string
             extra: 
                 auditLog: true
+                purify: html
                 logicalName: Additional Host Details
         
         sourceIp:
@@ -250,12 +272,14 @@ Incident:
             Fisma_Validator_Ip: true
             extra:
                 auditLog: true
+                purify: plaintext
                 logicalName: Source IP Address
             comment: The IP address from which the incident is believed to have originated
         sourceAdditional:
             type: string
             extra: 
                 auditLog: true
+                purify: html
                 logicalName: Additional Details About Incident Source
             comment: Additional description of the source or origin of the incident
         
@@ -263,6 +287,7 @@ Incident:
             type: string
             extra: 
                 auditLog: true
+                purify: html
                 logicalName: Actions That Were Taken Prior To Incident Report
                 searchIndex: unstored
             comment: What actions were taken prior to reporting the incident?
