--- a/application/doctrine/schema/IrCategory.yml
+++ b/application/doctrine/schema/IrCategory.yml
@@ -1,4 +1,6 @@
 IrCategory:
+    listeners: [XssListener]
+    
     columns:
         createdTs: 
             type: timestamp
@@ -6,8 +8,12 @@ IrCategory:
             type: timestamp
         name: 
             type: string(255)
+            extra:
+                purify: plaintext
         description:
             type: string
+            extra: 
+                purify: html
         category:
             type: enum
             values: ['CAT0','CAT1','CAT2','CAT3','CAT4','CAT5','CAT6']
