--- a/application/doctrine/schema/IrComment.yml
+++ b/application/doctrine/schema/IrComment.yml
@@ -4,6 +4,8 @@ IrComment:
             type: timestamp
         comment:
             type: string
+            extra:
+                purify: plaintext
         userId: 
             type: integer
             comment: The user who left this comment
