--- a/application/doctrine/schema/IrStep.yml
+++ b/application/doctrine/schema/IrStep.yml
@@ -1,12 +1,18 @@
 IrStep:
+    listeners: [XssListener]
+    
     columns:
         cardinality: 
             type: integer
             comment: The order of this step relative to the other steps within this workflow
         name: 
             type: string(255)
+            extra:
+                purify: plaintext
         description:
             type: string
+            extra: 
+                purify: html
                 
         workflowId: 
             type: integer
