--- a/application/doctrine/schema/IrWorkflowDef.yml
+++ b/application/doctrine/schema/IrWorkflowDef.yml
@@ -1,10 +1,15 @@
 IrWorkflowDef:
+    listeners: [XssListener]
     
     columns:
         name: 
             type: string(255)
+            extra:
+                purify: plaintext
         description: 
             type: string
+            extra: 
+                purify: html
 
     actAs:
         Timestampable:
