--- a/application/doctrine/schema/Organization.yml
+++ b/application/doctrine/schema/Organization.yml
@@ -1,5 +1,5 @@
 Organization:    
-    listeners: [IndexListener]
+    listeners: [XssListener, IndexListener]
 
     columns:
         createdTs: timestamp
@@ -9,6 +9,7 @@ Organization:
             notblank: true
             notnull: true
             extra:
+                purify: plaintext
                 searchIndex: unstored
         nickname:
             type: string(255)
@@ -18,6 +19,7 @@ Organization:
             unique: true
             extra:
                 logicalName: Nickname
+                purify: plaintext
                 searchIndex: unstored
         orgType:
             type: enum
@@ -30,6 +32,7 @@ Organization:
         description: 
             type: string
             extra:
+                purify: html
                 searchIndex: unstored
 
     relations:
