--- a/application/doctrine/schema/Product.yml
+++ b/application/doctrine/schema/Product.yml
@@ -1,22 +1,25 @@
 Product:
-    listeners: [IndexListener, NotificationListener]
+    listeners: [XssListener, IndexListener, NotificationListener]
     
     columns:
         vendor:
             type: string(255)
             extra:
+                purify: plaintext
                 searchIndex: unstored
                 notify: true
             comment: The name of the vendor who brands this product
         name:
             type: string(255)
             extra:
+                purify: plaintext
                 searchIndex: unstored
                 notify: true
             comment: Name of the product
         version:
             type: string(255)
             extra:
+                purify: plaintext
                 searchIndex: keyword
                 notify: true
             comment: Version of the product
@@ -25,5 +28,6 @@ Product:
             unique: true
             extra:
                 logicalName: CPE ID
+                purify: plaintext
                 notify: true
             comment: The common platform enumeration (CPE) for this product, if known
