--- a/application/doctrine/schema/System.yml
+++ b/application/doctrine/schema/System.yml
@@ -1,5 +1,5 @@
 System:
-    listeners: [IndexListener]
+    listeners: [XssListener, IndexListener]
     
     columns:    
         type:
@@ -17,6 +17,7 @@ System:
         confidentialityDescription:
             type: string
             extra:
+                purify: html
                 searchIndex: unstored
         integrity:
             type: enum
@@ -27,6 +28,7 @@ System:
         integrityDescription:
             type: string
             extra:
+                purify: html
                 searchIndex: unstored
         availability:
             type: enum
@@ -37,6 +39,7 @@ System:
         availabilityDescription:
             type: string
             extra:
+                purify: html
                 searchIndex: unstored
         fipsCategory:
             type: enum
@@ -82,6 +85,8 @@ System:
         piaUrl:
             type: string(255)
             Fisma_Validator_Url: true
+            extra:
+                purify: plaintext
             comment: A URL pointing to the Privacy Impact Analysis
         sornRequired:
             type: enum
@@ -92,10 +97,13 @@ System:
         sornUrl:
             type: string(255)
             Fisma_Validator_Url: true
+            extra:
+                purify: plaintext
             comment: A URL pointing to the System Of Record Notice
         uniqueProjectId:
             type: string(23)
             extra:
+                purify: plaintext
                 searchIndex: unstored
                 searchAlias: upi
             comment: The Unique Project Identifier (UPI) correlates information systems to their corresponding fiscal budget items. The UPI always has the following format: "xxx-xx-xx-xx-xx-xxxx-xx"        
