Task on branches OFJ-613 Remove plain text encoding from XssListener class
Removed plaintext encoding from XssListener
Removed instances of purify: plaintext from schema files
Removed incorrect use of purify:html from LdapConfig schema

--- a/application/doctrine/schema/IrHistory.yml
+++ b/application/doctrine/schema/IrHistory.yml
@@ -1,4 +1,6 @@
 IrHistory:
+    listeners: [XssListener]
+
     columns:
         createdTs: 
             type: timestamp
@@ -7,8 +9,6 @@ IrHistory:
             values: ['COMMENT','WORKFLOW','REPORT','CLASSIFY','RESOLVE','CLOSE']
         name: 
             type: string(255)
-            extra:
-                purify: plaintext
         description:
             type: string
             extra:
