--- a/application/doctrine/schema/IrIncidentWorkflow.yml
+++ b/application/doctrine/schema/IrIncidentWorkflow.yml
@@ -1,9 +1,9 @@
 IrIncidentWorkflow:
+    listeners: [XssListener]
+
     columns:
         name: 
             type: string(255)
-            extra:
-                purify: plaintext
         description:
             type: string
             extra:
